--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
-<script type="text/javascript">Elm.Main.fullscreen()</script>
+<script type="text/javascript">
+Elm.Main.fullscreen(
+    { height : 600
+    , width : 300
+    , seed : Math.floor(Math.random() * 1000000)
+    }
+)
+</script>
 </body>
 </html>
